fix(AHWR-251): nowrap for claims table cells (#135)

--- a/app/frontend/src/css/application.scss
+++ b/app/frontend/src/css/application.scss
@@ -171,4 +171,8 @@ hr.related-content {
   display: block;
   width: 100%;
   overflow-y: auto;
+
+  th td {
+    white-space: nowrap;
+  }
 }
